responsevness of overlay

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -92,7 +92,7 @@
         .protrait {
             width: 250px;
             height: 250px;
-            background: url('../img/tarekPortrait.jpg');
+            background: url('../img/portrait.jpg');
             border-radius: 50%;
             border: solid 3px $secondary-color;
         }
